@@ -1,6 +1,13 @@
+2007-01-03 Jordi Mas i Hernàndez <jordimash@gmail.com>
+
+	* planner-gantt-view.c: adds mouse wheel support to
+	to the gannt view.
+	* planner-usage-view.c: adds mouse wheel support to
+	to the usage view.
+
 2007-01-02 Jordi Mas i Hernàndez <jordimash@gmail.com>
 
-	* libplanner/mrp-task-manager.c: fixes bug # 372694
+	* libplanner/mrp-task-manager.c: fixes bug #372694
 
 2006-12-27 Jordi Mas i Hernàndez <jordimash@gmail.com>
 
